# Lima-camera-slsdetector

./: build-sls.sh  eiger-pom_64.xml  pom.xml  pom_64.xml
include/: SlsDetectorCamera.h  SlsDetectorInterface.h
slsDetectorsPackage_v3.0/Web_slsDetectorsPackage_v3.0/calibrationWizards/: CMakeLists.txt  Makefile  TSlsDetector.cpp  TSlsDetector.h  angCalWizard.cpp  angCalWizard.h  ang_new.off  angularCalibration.cpp  angularCalibration.h  angularCalibrationWizard.cpp  enCalDict.h  enCalLinkDef.h  enCalWizard.cpp  enCalWizard.h  energyCalibrationWizard.cpp  gitInfo.txt  gitInfoCalWiz.h  newcal_standard.sn000  newcal_standard.sn111  newcal_standard.sn222  newcal_standard.sn333  newcal_standard.sn444  newcal_standard.sn555  newcal_standard.sn666  newcal_standard.sn777  newcal_standard.sn888  newcal_standard.sn999  newcal_standard.snaaa  newcal_standard.snbbb  scanStep.h  updateGitVersion.sh
slsDetectorsPackage_v3.0/Web_slsDetectorsPackage_v3.0/calibrationWizards/manual/: Makefile
slsDetectorsPackage_v3.0/Web_slsDetectorsPackage_v3.0/examples/: test-jungfrau.config
slsDetectorsPackage_v3.0/Web_slsDetectorsPackage_v3.0/slsDetectorSoftware/: gitInfo.txt
slsDetectorsPackage_v3.0/Web_slsDetectorsPackage_v3.0/slsReceiverSoftware/: gitInfo.txt
slsDetectorsPackage_v3.0/libzmq/: Makefile  Makefile.in  config.status  configure  libtool
slsDetectorsPackage_v3.0/libzmq/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
slsDetectorsPackage_v3.0/libzmq/builds/: Makefile  Makefile.in
slsDetectorsPackage_v3.0/libzmq/doc/: Makefile  Makefile.in  zmq.7  zmq_atomic_counter_dec.3  zmq_bind.3  (+61 more)
src/: SlsDetectorCamera.cpp  SlsDetectorEiger.cpp
(+252 files in other folders)
